--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,12 @@
+#header {
+    background: black;
+}
 #name {
     position: relative;
     background: #4aaaa5;
     width: 200px;
     height: 50px;
 }
-
 h1 {
     position: absolute;
     color: white;
@@ -21,5 +23,11 @@ li {
 a {
     text-decoration: none;
     color: #cccccc;
+    
+}
+#grey {
+    background-image: url("../images/greyjean.jpg");
+    width: 100%;
+    z-index: -1;
     
 }
