--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,10 +9,10 @@ body {
 }
 .container {
     margin: 100px auto 30px auto;
-    width: 940px;
+    width: 930px;
     background: white;
-    height: 530px;
-    padding: 10px;
+    height: 450px;
+    padding: 15px;
 }
 header {
     width: 100%;
@@ -63,6 +63,13 @@ li {
 a {
     text-decoration: none;
     color: #cccccc;
+}
+img {
+    float: left;
+    margin-right: 10px;
+}
+p {
+    line-height: 1.6;
 }
 .footer {
     width: 100%;
