--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,9 @@ body {
     background: white;
     height: 450px;
     padding: 15px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #cccccc;
 }
 header {
     width: 100%;
@@ -26,9 +29,7 @@ header {
     border-color: #cccccc;
     z-index: -1;
 }
-.name {
-    width: 960px;
-}
+
 h1 {
     background: #4aaaa5;
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -49,7 +50,7 @@ h2{
     border-color: #cccccc;
     padding-bottom: 20px;
 }
-.sidemenu {
+.nav {
     width: 30%;
     float: right;
 }
@@ -81,7 +82,4 @@ p {
     border-style: solid;
     border-width: 7px 0px 0px 0px;
     border-color: #4aaaa5
-    
-
-
 }
