Figured out how to fix the heading centered at 960px, updated all html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,6 +30,12 @@ header {
     z-index: -1;
 }
 
+.headcontain {
+    width: 960px;
+    height: 65px;
+    margin-left: auto;
+    margin-right: auto;
+}
 h1 {
     background: #4aaaa5;
     font-family: Georgia, 'Times New Roman', Times, serif;
