--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,29 @@ img {
 p {
     line-height: 1.6;
 }
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 10px;
+    resize: vertical;
+  }
+textarea {
+    height: 140px;
+}
+input[type=submit] {
+    background: #4aaaa5;
+    width: 80px;
+    height: 30px;
+    font-size: small;
+    color: white;
+}
+label{
+    font-family: Arial, Helvetica, sans-serif;
+    color: #777777;
+}
 .footer {
     width: 100%;
     height: 50px;
