--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
     margin: 100px auto 30px auto;
     width: 930px;
     background: white;
-    height: 450px;
+    height: auto;
     padding: 15px;
     border-style: solid;
     border-width: 1px;
@@ -71,7 +71,7 @@ a {
     text-decoration: none;
     color: #cccccc;
 }
-img {
+.profile {
     float: left;
     margin-right: 10px;
 }
@@ -100,6 +100,32 @@ input[type=submit] {
 label{
     font-family: Arial, Helvetica, sans-serif;
     color: #777777;
+}
+.port {
+    width: 30%;
+    height: auto;
+    margin: 15px;
+}
+.imagecontain {
+    width: 700px;
+}
+.images {
+    position: relative;
+    display: inline;
+}
+
+h4 {
+    position: absolute;
+    bottom:5px;
+    left: 0px;
+    background: #4aaaa5;
+    width: 210px;
+    margin-left: 15px;
+    height: 35px;
+    color: white;
+    text-align: center;
+    padding-top: 7px;
+    box-sizing: border-box;
 }
 .footer {
     width: 100%;
