--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -131,6 +131,12 @@ h4 {
     padding-top: 7px;
     box-sizing: border-box;
 }
+
+h5 {
+    text-align: center;
+    color: #cccccc;
+    z-index: 6;
+}
 .footer {
     width: 100%;
     height: 50px;
