--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,7 @@ h1 {
 
 h2{
     width: inherit;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: #4aaaa5;
     border-style: solid;
     border-width: 0px 0px 2px 0px;
@@ -81,9 +82,11 @@ a {
 }
 p {
     line-height: 1.6;
+    font-family: Arial, Helvetica, sans-serif;
 }
 input[type=text], select, textarea {
     width: 100%;
+    font-family: Arial, Helvetica, sans-serif;
     padding: 10px;
     border: 1px solid #ccc;
     box-sizing: border-box;
@@ -120,6 +123,7 @@ label{
 
 h4 {
     position: absolute;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     bottom:5px;
     left: 0px;
     background: #4aaaa5;
@@ -134,6 +138,7 @@ h4 {
 
 h5 {
     text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
     color: #cccccc;
     z-index: 6;
 }
@@ -146,5 +151,5 @@ h5 {
     background: #666666 ;
     border-style: solid;
     border-width: 7px 0px 0px 0px;
-    border-color: #4aaaa5
+    border-color: #4aaaa5;
 }
